<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="default_nickname">"zz"</string>
    <string name="default_phonenumber">"13540472526"</string>
    <string name="default_signiture">"主人很懒，什么都没写哦"</string>
    <string name="hello">Hello World, ClockMainActivity!</string>
    <string name="app_name">WAKE</string>
    <string name="label">"标签"</string>
    <string name="alarm_list_title">"闹钟"</string>
    <string name="add_alarm">"添加闹钟"</string>
    <string name="sign_in">"登陆"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"闹钟"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm">"修改闹钟设置"</string>
    <string name="enable_alarm">"启用闹钟"</string>
    <string name="delete_alarm">"取消闹钟"</string>
    <string name="disable_alarm">"停用闹钟"</string>
    <string name="delete_alarm_confirm">"将会取消此闹钟。"</string>
    <string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>
    <string name="alarm_repeat">"重复"</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="alert">"铃声"</string>
    <string name="time">"时间"</string>
    <string name="set_alarm">"设置闹钟"</string>
    <string name="register_account">"手机号"</string>
    <string name="register_nick_name">"用户名"</string>
    <string name="ver_code_text">"验证码"</string>
    <string name="register_ver_code">"获取验证码"</string>
    <string name="log_in_name">"账号"</string>
    <string name="log_in_hint">"您的手机号"</string>
    <string name="register_password_hint">"请输入密码"</string>
    <string name="register_nickname_hint">"昵称"</string>
    <string name="log_in_password">"密码"</string>
    <string name="register_password_confirm">"密码确认"</string>
    <string name="login_register_link">"没有账号？"<a href="#" mce_href="#">注册</a></string>
    <string name="register_hint">"您的手机号"</string>
    <string name="register_login_link">"已有账号"<a href="#" mce_href="#">登录</a></string>
    <string name="login_label_sign_in">"登陆"</string>
    <string name="login_label_sign_up">"注册"</string>
    <string name="sign_up">"注册"</string>
    <string name="wake_sure">"WAKE"</string>
    <string name="my_space">"我的空间"</string>
    <string name="about_us">"关于我们"</string>
    <string name="sleep_time">"睡眠历史"</string>
    <string name="inter_detector_text">"没有网络的我宛如一条咸鱼"</string>
    <string name="inter_detector_text_2">"网络都没有，我怎么带你飞呢"</string>
    <string name="share">"分享我的起床时间"</string>
    <string name="done">"完成"</string>
    <string name="revert">"还原"</string>
    <string name="delete">"删除闹钟"</string>
    <string name="alarm_alert_dismiss_text">"取消"</string>
    <string name="alarm_volume_title">"闹钟音量"</string>
    <string name="alarm_volume_summary">"设置闹钟音量"</string>
    <string name="silent_alarm_summary">"静音"</string>
    <string name="alarm_notify_text">"选择暂停或关闭此闹钟。"</string>
    <string name="alarm_alert_snooze_text">"再睡一会儿"</string>
    <string name="alarm_alert_alert_silenced">"闹钟响铃时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>
    <string name="alarm_notify_snooze_text">"已将闹钟设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。"</string>
    <string name="alarm_alert_snooze_set">"暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。"</string>
    <string name="rank">"我的排行"</string>
      <!---AppUser information-->
    <string name="info_phone_text">手机号</string>
    <string name="info_nickname_text">昵称</string>
    <string name="info_brief_intro_text">个性签名</string>
    <string name="info_brief_intro_hint">快来设置你的个性签名吧</string>
    <string-array name="alarm_set">
        <item msgid="5163476010406761625">"已将此闹钟设置为从现在起不到 1 分钟后提醒。"</item>
        <item msgid="7110525731259629055">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g>后再提醒。"</item>
        <item msgid="7003982794086186185">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="7311021123230077742">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="8431715191823114872">"已将此闹钟设置为从现在起 <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3244151088673185428">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3663661342600168814">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="7779544127785487304">"已将该闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
    </string-array>
    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> 分钟"</string>
    <string name="every_day">"每天"</string>
    <string name="never">"一律不"</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">"选择要显示的时钟。"</string>
    <string name="analog_gadget">"模拟时钟"</string>
    <string name="settings">"设置"</string>
    <string name="alarm_in_silent_mode_title">"静音模式下闹钟响"</string>
    <string name="alarm_in_silent_mode_summary">"手机处于静音模式时，闹钟仍会响"</string>
    <string name="snooze_duration_title">"再响间隔"</string>
    <string-array name="snooze_duration_entries">
        <item msgid="8337408933053603125">"5 分钟"</item>
        <item msgid="5294206441496024610">"10 分钟"</item>
        <item msgid="2165904039211935470">"15 分钟"</item>
        <item msgid="7248236967714374250">"20 分钟"</item>
        <item msgid="738394723625179423">"25 分钟"</item>
        <item msgid="1180222611308391616">"30 分钟"</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item msgid="3655014754453084122">"5"</item>
        <item msgid="8939029597449573449">"10"</item>
        <item msgid="3922647341176353315">"15"</item>
        <item msgid="5821804105985044459">"20"</item>
        <item msgid="6048861883552402852">"25"</item>
        <item msgid="2740866721232379791">"30"</item>
    </string-array>
    <string name="alarm_klaxon_service_desc">"在 Clock 中设置的闹钟铃声播放服务。"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    ////////////////AChartEngine使用-start
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    ////////////////AChartEngine使用-end

    <string name="getupHistory_share">分享</string>
    <string name="getupHistory_shareContent">来自%1$s的分享\n %2$s的起床时间: %3$s</string>
    <string name="getupHistory_shareTitle">分享起床时间到</string>
    <string name="getupHistory_spinner_str1">无限制</string>
    <string name="getupHistory_spinner_str2">最近一周</string>
    <string name="getupHistory_spinner_str3">最近一月</string>
    <string name="getupHistory_spinner_str4">最近一年</string>
    <string name="getupHistory_spinner_str5">自定义</string>
</resources>
