<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_background">
    <!-- padding 内边距   layout_margin 外边距  
        android:layout_alignParentTop 布局的位置是否处于顶部 -->

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg" >
        <!-- 账号 -->
        <TextView
            android:id="@+id/login_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/log_in_name"/>

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_in_hint"
            android:layout_below="@id/login_user_input"
            android:singleLine="true"
            android:inputType="text"/>
        <!-- 密码 text -->
        <TextView
            android:id="@+id/register_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit"
            android:layout_marginTop="3dp"
            android:text="@string/log_in_password"/>

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_text"
            android:password="true"
            android:singleLine="true"
            android:inputType="textPassword" />
        <!-- 登录button -->
        <Button
            android:id="@+id/signin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/password_edit"
            android:background="#4cc05f"
            android:textSize="20dp"
            android:text="@string/login_label_sign_in"
            android:layout_below="@+id/password_edit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView  android:id="@+id/register"
            android:text="@string/login_register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="#888"
            android:textColorLink="#FF0066CC" />
        <ImageView android:id="@+id/miniTwitter_logo"
            android:src="@drawable/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp" />
    </RelativeLayout>
</LinearLayout>  