<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.maicius.wake.InterChange.UserInfo"
    android:background="@drawable/userspace_back">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/info_phone_text"
        android:id="@+id/tel"
        android:layout_marginTop="38dp"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_telephone"
        android:editable="false"
        android:hint="@string/info_phone_text"
        android:textSize="24sp"
        android:layout_marginTop="38dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/info_nickname_text"
        android:id="@+id/nickname"
        android:layout_marginTop="37dp"
        android:textSize="24sp"
        android:layout_below="@+id/tel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/info_brief_intro_text"
        android:id="@+id/brief_intro"
        android:textSize="24sp"
        android:layout_below="@+id/nickname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_nickname"
        android:hint="@string/info_nickname_text"
        android:textSize="24sp"
        android:layout_alignTop="@+id/nickname"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:id="@+id/brief_intro_text"
        android:textSize="24sp"
        android:hint="@string/info_brief_intro_hint"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_login_div_bg"
        android:layout_below="@id/brief_intro" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="保存修改"
        android:id="@+id/button_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
